syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.fossa";

import "common.proto";
import "google/protobuf/wrappers.proto";

message ReportMessage {
    string id = 1;
    ReportType type = 2;
    google.protobuf.StringValue feedId = 3;
    string reporterId = 4;
    google.protobuf.StringValue islandId = 5;
    google.protobuf.StringValue userId = 6;
    google.protobuf.StringValue messageId = 7;
    google.protobuf.StringValue feedGroupId = 8;
}

message NewReportRequest {
    ReportType type = 1;
    google.protobuf.StringValue feedId = 2;
    string reporterId = 3;
    google.protobuf.StringValue islandId = 4;
    google.protobuf.StringValue userId = 5;
    google.protobuf.StringValue messageId = 6;
    google.protobuf.StringValue feedGroupId = 7;
}

message ReportResponse {
    CommonStatus status = 1;
    ReportMessage report = 2;
}

service ReportService {
    rpc CreateReport(NewReportRequest) returns (ReportResponse) {};
}